--- a/server/config.env
+++ b/server/config.env
@@ -1,2 +1,4 @@
 PORT=8080
 CONN_STR=mongodb+srv://sree:sree2002@cluster0.n63e6.mongodb.net/attendancedb?retryWrites=true&w=majority&appName=Cluster0
+
+SECRET_KEY = attend-app
