--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/lexend": "^5.2.5",
-    "@mui/material": "^6.4.6",
+    "@mui/lab": "^6.0.0-beta.31",
+    "@mui/material": "^6.4.8",
     "@mui/styled-engine-sc": "^6.4.6",
+    "@phosphor-icons/react": "^2.1.7",
     "axios": "^1.8.3",
     "react": "^19.0.0",
     "react-router-dom": "^7.2.0",
